package com.peppayi.designpattern.headfirst.chapters.chapter01.duck.quack;

public interface QuackBehavior {

    void quack();
}
